working on routing

--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
 
 <body>
     <canvas id="canvas"></canvas>
-
+    <div class = "container">
     <section class="begin">
         <div class="row">
-            <div class="col-2">
+            <div class="col-12">
+                <h1 class = "header"> Maddie in Good Company</h1>
             </div>
-            <div class="col-9">
-                <h1 class="start"> Maddie in Good Company</h1>
+        </div>
+        <div class="row">
+            <br><br><br><br>
+            <div class = "col-12">
+                <h2 class="start"> ~ Enter ~ </h2>
             </div>
         </div>
     </section>
-
+    </div>
 
     <main class="maincontent">
         <div class="container">
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-6">
-                    <h1> Maddie in Good Company</h1>
+                <div class="col-12">
+                    <h1 class = "header"> Maddie in Good Company</h1>
                 </div>
             </div>
 
