routing for about seciton done

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-2">
                     <div> Home </div>
-                    <div> About </div>
+                    <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/about.html">About</a></div>
                     <div> Music</div>
                     <div> Photos </div>
                     <div> Videos </div>
