working on routing

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             </div>
 
             <div class="row">
-                <div class="col-2">
-                    <div> Home </div>
-                    <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/about.html">About</a></div>
-                    <div> Music</div>
-                    <div> Photos </div>
-                    <div> Videos </div>
-                    <div> Shows </div>
-                </div>
+                    <div class="col-2">
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/index.html" style = "color:white">Home</a></div>
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/about.html" style = "color:white">About</a></div>
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/music.html" style = "color:white">Music</a></div>
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/photos.html" style = "color:white">Photos</a></div>
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/videos.html" style = "color:white">Videos</a></div>
+                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/shows.html" style = "color:white">Shows</a></div>
+                        </div>
                 <div class="col-8">
                     <div id="backgroundpic">
                         <img src="assets/images/MaddieinGoodCompany.jpeg" alt="background pic">
