added music and pics

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
     <canvas id="canvas"></canvas>
 
-    <main class = "about">
+    <main class = "main">
         <div class="container">
             <div class="row">
                 <div class="col-12">
