--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shows</title>
+    <title>Maddie in Good Company</title>
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,12 +17,27 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <div class = "container">
+    <section class="begin">
+        <div class="row">
+            <div class="col-12">
+                <h1 class = "header"> Maddie in Good Company</h1>
+            </div>
+        </div>
+        <div class="row">
+            <br><br><br><br>
+            <div class = "col-12">
+                <h2 class="start"> ~ Enter ~ </h2>
+            </div>
+        </div>
+    </section>
+    </div>
 
-    <main class = "main">
+    <main class="maincontent">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class = "header"> Shows</h1>
+                    <h1 class = "header"> Maddie in Good Company</h1>
                 </div>
             </div>
 
@@ -36,8 +51,8 @@
                             <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/shows.html" style = "color:white">Shows</a></div>
                         </div>
                 <div class="col-8">
-                    <div>
-                        <p> Shows Goes here</p>
+                    <div id="backgroundpic">
+                        <img src="assets/images/MaddieinGoodCompany.jpeg" alt="background pic">
                     </div>
                 </div>
             </div>
