--- a/music.html
+++ b/music.html
@@ -18,7 +18,7 @@
 <body>
     <canvas id="canvas"></canvas>
 
-    <main class = "about">
+    <main class = "main">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -35,9 +35,9 @@
                             <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/videos.html" style = "color:white">Videos</a></div>
                             <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/shows.html" style = "color:white">Shows</a></div>
                         </div>
-                <div class="col-8">
+                <div class="col-4">
                     <div>
-                        <p> Music Goes here</p>
+                            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="280" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
             </div>
