--- a/index.html
+++ b/index.html
@@ -17,13 +17,29 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <main class = "main">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class = "header"> Maddie in Good Company</h1>
-                    </div>
+    <div class = "container">
+    <section class="begin">
+        <div class="row">
+            <div class="col-12">
+                <h1 class = "header"> Maddie in Good Company</h1>
+            </div>
+        </div>
+        <div class="row">
+            <br><br><br><br>
+            <div class = "col-12">
+                <h2 class="start"> ~ Enter ~ </h2>
+            </div>
+        </div>
+    </section>
+    </div>
+
+    <main class="maincontent">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class = "header"> Maddie in Good Company</h1>
                 </div>
+            </div>
 
             <div class="row">
                     <div class="col-2">
@@ -41,6 +57,7 @@
                 </div>
             </div>
         </div>
+    </main>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
