--- a/music.html
+++ b/music.html
@@ -28,12 +28,12 @@
 
             <div class="row">
                     <div class="col-2">
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/index.html" style = "color:white">Home</a></div>
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/about.html" style = "color:white">About</a></div>
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/music.html" style = "color:white">Music</a></div>
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/photos.html" style = "color:white">Photos</a></div>
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/videos.html" style = "color:white">Videos</a></div>
-                            <div><a href="file:///Users/griffincriste/Desktop/Coding%20Class/Maddie-in-good-company/Maddie-in-Good-Company/shows.html" style = "color:white">Shows</a></div>
+                            <div><a href="index.html" style = "color:white">Home</a></div>
+                            <div><a href="about.html" style = "color:white">About</a></div>
+                            <div><a href="music.html" style = "color:white">Music</a></div>
+                            <div><a href="photos.html" style = "color:white">Photos</a></div>
+                            <div><a href="videos.html" style = "color:white">Videos</a></div>
+                            <div><a href="shows.html" style = "color:white">Shows</a></div>
                         </div>
                 <div class="col-4">
                     <div>
