--- a/welcome.html
+++ b/welcome.html
@@ -27,7 +27,7 @@
 
             <div class="row">
                     <div class="col-2">
-                            <div><a href="index.html" style = "color:white">Home</a></div>
+                            <div><a href="welcome.html" style = "color:white">Home</a></div>
                             <div><a href="about.html" style = "color:white">About</a></div>
                             <div><a href="music.html" style = "color:white">Music</a></div>
                             <div><a href="photos.html" style = "color:white">Photos</a></div>
