--- a/photos.html
+++ b/photos.html
@@ -10,8 +10,10 @@
    
     <link rel="stylesheet" href="w3.css">
     <style>
-            .mySlides {display:none;}
-            </style>
+    .mySlides {display:none;}
+    .w3-left, .w3-right, .w3-badge {cursor:pointer}
+    .w3-badge {height:13px;width:13px;padding:0}
+    </style>
     
    <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -52,10 +54,10 @@
                               <div class="w3-center w3-display-bottommiddle" style="width:100%">
                               <button class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094; Prev</button>
                               <button class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095; Next</button>
-                              <span class="w3-badge demo w3-border" onclick="currentDiv(1)"></span>
-                              <span class="w3-badge demo w3-border" onclick="currentDiv(2)"></span>
-                              <span class="w3-badge demo w3-border" onclick="currentDiv(3)"></span>
-                              <span class="w3-badge demo w3-border" onclick="currentDiv(4)"></span>
+                              <span class="w3-badge w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+                              <span class="w3-badge w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+                              <span class="w3-badge w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+                              <span class="w3-badge w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
                             </div>
                         </div>
                       </div>                              
@@ -66,23 +68,32 @@
 
   
     <script>
-                var slideIndex = 1;
-        showDivs(slideIndex);
+    var slideIndex = 1;
+showDivs(slideIndex);
 
-        function plusDivs(n) {
-        showDivs(slideIndex += n);
-        }
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
 
-        function showDivs(n) {
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-        if (n > x.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = x.length}
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";  
-        }
-        x[slideIndex-1].style.display = "block";  
-        }
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
             </script>
 
               <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
