working on slideshow

--- a/photos.html
+++ b/photos.html
@@ -206,7 +206,7 @@
       <img class="demo cursor" src="../Maddie-in-Good-Company/assets/images/maddieingoodco2.jpg" style="width:80%" onclick="currentSlide(3)" alt="Mountains and fjords">
     </div>
     <div class="column">
-      <img class="demo cursor" src="./Maddie-in-Good-Company/assets/images/maddieingoodco3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="../Maddie-in-Good-Company/assets/images/maddieingoodco3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
     </div>
     <div class="column">
       <img class="demo cursor" src="img_nature.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
