--- a/welcome.html
+++ b/welcome.html
@@ -33,6 +33,7 @@
                             <div><a href="photos.html" style = "color:white">Photos</a></div>
                             <div><a href="videos.html" style = "color:white">Videos</a></div>
                             <div><a href="shows.html" style = "color:white">Shows</a></div>
+                            <div><a href="home.html" style = "color:white">NEW HOME</a></div>
                         </div>
                 <div class="col-8">
                     <div id="backgroundpic">
