--- a/home.html
+++ b/home.html
@@ -163,7 +163,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <!-- <a class="navbar-brand" href="../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg">Logo</a> -->
+      <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="75" height= "75">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -236,7 +237,7 @@
 <div id="about" class="container text-center">
   <h3>THE BAND</h3>
   <p><em>Soul n Roll</em></p>
-  <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Maddie In Good Company started blah blah</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
@@ -358,9 +359,9 @@
   <div class="row">
     <div class="col-md-4">
       <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Nashville US</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 6969696969</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
