--- a/home.html
+++ b/home.html
@@ -163,8 +163,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <!-- <a class="navbar-brand" href="../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg">Logo</a> -->
-      <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50">
+      <a class="navbar-brand" href="../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg">Logo</a>
+      <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -->
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
