--- a/home.html
+++ b/home.html
@@ -391,16 +391,16 @@
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <h2>Mike Ross, Manager</h2>
-      <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum.</p>
+      <h2>Maddie, SuperStar/Vocals</h2>
+      <p>"I just wanna be a star"</p>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h2>Chandler Bing, Guitarist</h2>
-      <p>Always a pleasure people! Hope you enjoyed it as much as I did. Could I BE.. any more pleased?</p>
+      <h2>Hattie-McVest Canone, Guitarist</h2>
+      <p>"I can't sit still for more than 5 seconds"</p>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h2>Peter Griffin, Bass player</h2>
-      <p>I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
+      <h2>Grandpa Griff, Drummer</h2>
+      <p>"Where's the food man?"</p>
     </div>
   </div>
 </div>
