--- a/home.html
+++ b/home.html
@@ -241,36 +241,36 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Chris Canone</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="../Maddie-in-Good-Company/assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
-        <p>Guitarist and Lead Vocalist</p>
+        <p>Guitarist</p>
         <p>Loves long walks on the beach</p>
-        <p>Member since 1988</p>
+        <p>Favorite Band: Phish</p>
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Maddie</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="../Maddie-in-Good-Company/assets/images/maddie.jpg" class="img-circle person" alt="Maddie width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drummin'</p>
-        <p>Member since 1988</p>
+        <p>Singer</p>
+        <p>Loves Creyton</p>
+        <p>Favorite Band: Slipknot</p>
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Griffin</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="../Maddie-in-Good-Company/assets/images/griffin.jpg" class="img-circle person" alt="Griffin" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>Loves math</p>
-        <p>Member since 2005</p>
+        <p>Drummer</p>
+        <p>Loves Math</p>
+        <p>Favorite Band: U2</p>
       </div>
     </div>
   </div>
