--- a/home.html
+++ b/home.html
@@ -241,6 +241,17 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
+        <p class="text-center"><strong>Maddie</strong></p><br>
+        <a href="#demo2" data-toggle="collapse">
+            <img src="../Maddie-in-Good-Company/assets/images/maddie.jpg" class="img-circle person" alt="Maddie" width="255" height="255">
+        </a>
+        <div id="demo2" class="collapse">
+            <p>Singer</p>
+            <p>Loves Creyton</p>
+            <p>Favorite Band: Slipknot</p>
+        </div>
+    </div>
+    <div class="col-sm-4">
       <p class="text-center"><strong>Chris Canone</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="../Maddie-in-Good-Company/assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
@@ -251,17 +262,7 @@
         <p>Favorite Band: Phish</p>
       </div>
     </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>Maddie</strong></p><br>
-      <a href="#demo2" data-toggle="collapse">
-        <img src="../Maddie-in-Good-Company/assets/images/maddie.jpg" class="img-circle person" alt="Maddie width="255" height="255">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>Singer</p>
-        <p>Loves Creyton</p>
-        <p>Favorite Band: Slipknot</p>
-      </div>
-    </div>
+  
     <div class="col-sm-4">
       <p class="text-center"><strong>Griffin</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
