--- a/home.html
+++ b/home.html
@@ -385,9 +385,9 @@
   <br>
   <h3 class="text-center">From The Blog</h3>  
   <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Mike</a></li>
-    <li><a data-toggle="tab" href="#menu1">Chandler</a></li>
-    <li><a data-toggle="tab" href="#menu2">Peter</a></li>
+    <li class="active"><a data-toggle="tab" href="#home">Maddie</a></li>
+    <li><a data-toggle="tab" href="#menu1">Chris</a></li>
+    <li><a data-toggle="tab" href="#menu2">Griffin</a></li>
   </ul>
 
   <div class="tab-content">
