--- a/home.html
+++ b/home.html
@@ -252,7 +252,7 @@
         </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Chris Canone</strong></p><br>
+      <p class="text-center"><strong>Chris</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="../Maddie-in-Good-Company/assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
       </a>
