--- a/home.html
+++ b/home.html
@@ -281,23 +281,24 @@
 <div id="tour" class="bg-1">
   <div class="container">
     <h3 class="text-center">TOUR DATES</h3>
-    <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!</p>
     <ul class="list-group">
-      <li class="list-group-item">September <span class="label label-danger">Sold Out!</span></li>
+      <!-- <li class="list-group-item">January 5th <span class="label label-danger">Sold Out!</span></li>
       <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li> 
-      <li class="list-group-item">November <span class="badge">3</span></li> 
+      <li class="list-group-item">November <span class="badge">3</span></li>  -->
     </ul>
     
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
-          <p>Friday 27 November 2015</p>
+          <img src="../Maddie-in-Good-Company/assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
+          <p><strong>5 Spot</strong></p>
+          <p>January 5 2019</p>
+          <p>With Camden West</p>
+          <p>9:00pm</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
       </div>
-      <div class="col-sm-4">
+      <!-- <div class="col-sm-4">
         <div class="thumbnail">
           <img src="newyork.jpg" alt="New York" width="400" height="300">
           <p><strong>New York</strong></p>
@@ -312,8 +313,8 @@
           <p>Sunday 29 November 2015</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </div>
   
   <!-- Modal -->
