--- a/home.html
+++ b/home.html
@@ -407,15 +407,15 @@
   </div>
 </div>
 
-<!-- Image of location/map -->
-<img src="map.jpg" class="img-responsive" style="width:100%">
+<!-- Image of location/map
+<img src="map.jpg" class="img-responsive" style="width:100%"> -->
 
 <!-- Footer -->
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
+
 </footer>
 
 <script>
