fixed ticket prices

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       </a>
       <div id="demo" class="collapse">
         <p>Guitarist</p>
-        <p>Loves long walks on the beach</p>
+        <p>Loves NY pizza</p>
         <p>Favorite Band: Phish</p>
       </div>
     </div>
@@ -329,7 +329,7 @@
         <div class="modal-body">
           <form role="form">
             <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $23 per person</label>
+              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $10 per person</label>
               <input type="number" class="form-control" id="psw" placeholder="How many?">
             </div>
             <div class="form-group">
