--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
   <div class="row">
     <div class="col-md-4">
       <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Nashville US</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
     </div>
