--- a/index.html
+++ b/index.html
@@ -168,18 +168,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">ABOUT</a></li>
         <li><a href="#tour">TOUR</a></li>
         <li><a href="#contact">CONTACT</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li> 
-          </ul>
-        </li>
+        <li><a href="#media">MEDIA</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
@@ -351,6 +343,29 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Container for Media -->
+<div id = "media" class = "container">
+    <h3 class="text-center">Media</h3>
+    <div class = "row">
+        <div class = "col-md-8">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+        </div>
+
+        <div class = "col-md-4">
+            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="280" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+
+    </div>
+
+
+</div>
+
+
+
+
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container">
