--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
     <div class = "row">
-        <div class = "col-md-8">
+        <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div class = "col-md-4">
+        <div>
             <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="280" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
