--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 <div id="about" class="container text-center">
   <h3>THE BAND</h3>
   <p><em>Soul n Roll</em></p>
-  <p>Maddie In Good Company started blah blah</p>
+  <p>Maddie In Good Company started in December of 2018 with Maddie, Chris and Griffin. Throughout the years they have played multile shows and recorded two songs. </p>
   <br>
   <div class="row">
     <div class="col-sm-4">
@@ -279,7 +279,8 @@
     </ul>
     
     <div class="row text-center">
-      <div class="col-sm-4">
+      <div class="col-sm-4"></div>
+        <div class="col-sm-4">
         <div class="thumbnail">
           <img src="../Maddie-in-Good-Company/assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
           <p><strong>5 Spot</strong></p>
@@ -350,12 +351,12 @@
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
     <div class = "row">
-        <div>
+        <div class = "col-sm-8">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div>
-            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="280" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div class = "col-sm-4">
+            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
     </div>
