--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg">Logo</a>
+      <img src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg" alt = "logo" width="50" height="50">
       <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -->
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
