--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <img src="../Maddie-in-Good-Company/assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
           <p><strong>5 Spot</strong></p>
           <p>January 5 2020</p>
-          <p>With Camden West</p>
+          <p>With Camden West and Carter Veil</p>
           <p>9:00pm</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
