working on sizing for media

--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
         <div class="col-sm-4">
         <div class="thumbnail">
           <img src="../Maddie-in-Good-Company/assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
-          <p><strong>5 Spot</strong></p>
+          <p><strong>@ The 5 Spot</strong></p>
           <p>January 5 2020</p>
-          <p>With Camden West and Carter Veil</p>
+          <p>w/ Camden West & Carter Veil</p>
           <p>9:00pm</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
@@ -350,12 +350,12 @@
 <!-- Container for Media -->
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
-    <div class = "row">
-        <div class = "col-sm-6">
-            <iframe width="300" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+    <div class = "row text-center">
+        <div class = "col-sm-8">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div class = "col-sm-6">
+        <div class = "col-sm-4">
             <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
