--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
   textarea {
     resize: none;
   }
+  iframe {
+  height: 300px;
+  width: 500px;
+  resize: both;
+  overflow: auto;
+}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -350,12 +356,12 @@
 <!-- Container for Media -->
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
-    <div class = "row text-center">
-        <div class = "col-sm-8">
+    <div class = "row">
+        <div class = "col">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div class = "col-sm-4">
+        <div class = "col">
             <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
