added logos at top

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
   textarea {
     resize: none;
   }
+  .social{
+      height:50px;
+      width:50px;
+  }
 
   </style>
 </head>
@@ -163,7 +167,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <img src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg" alt = "logo" width="50" height="50">
+      <a class="social-media" href = "https://gcriste.github.io/Maddie-in-Good-Company/"><img src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg"  alt = "logo" width="50" height="50">
+        <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
+        class="img-fluid social" src="assets/images/instagram logo.jpeg" alt="instagram icon"></a>
+        <a class="social-media" href="https://www.facebook.com/MaddieInGoodCompany/"><img
+        class="img-fluid social" src="assets/images/facebook.png" alt="facebook icon"></a>
       <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -->
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
