fixed logos at top

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
   .social{
       height:50px;
       width:50px;
+      padding:2px;
+      border-radius:15px;
+      
   }
 
   </style>
@@ -167,7 +170,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="social-media" href = "https://gcriste.github.io/Maddie-in-Good-Company/"><img src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg"  alt = "logo" width="50" height="50">
+      <a class="social-media" href = "https://gcriste.github.io/Maddie-in-Good-Company/"><img
+         class="img-fluid social" src="../Maddie-in-Good-Company/assets/images/MGC logo.jpg"  alt = "logo" width="50" height="50">
         <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
         class="img-fluid social" src="assets/images/instagram logo.jpeg" alt="instagram icon"></a>
         <a class="social-media" href="https://www.facebook.com/MaddieInGoodCompany/"><img
