--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 <!-- Container for Media -->
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
-    <div class = "row text-left">
-        <div class = "col-sm-8 fluid">
+    <div class = "row text-center">
+        <div class = "col-sm-12 fluid">
             <iframe width="300" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div class = "col-sm-4 fluid">
+        <div class = "col-sm-12 fluid">
             <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
