--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
       border-radius:15px;
       
   }
+ 
 
   </style>
 </head>
@@ -365,11 +366,11 @@
     <h3 class="text-center">Media</h3>
     <div class = "row text-center">
         <div class = "col-sm-12 fluid">
-            <iframe width="300" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            <iframe width="300" height="315" style="float:center" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
         <div class = "col-sm-12 fluid">
-            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" style="float:center" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
     </div>
