--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     resize: none;
   }
   .social{
+      opacity:.5;
       height:50px;
       width:50px;
       padding:2px;
@@ -158,7 +159,9 @@
       
   }
  
-
+.social:hover{
+    opacity:0.9;
+}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -177,6 +180,8 @@
         class="img-fluid social" src="assets/images/instagram logo.jpeg" alt="instagram icon"></a>
         <a class="social-media" href="https://www.facebook.com/MaddieInGoodCompany/"><img
         class="img-fluid social" src="assets/images/facebook.png" alt="facebook icon"></a>
+        <a class="social-media" href="https://twitter.com/MadGoodCo"><img
+            class="img-fluid social" src="assets/images/twitterlogo.png" alt="twitter icon"></a>
       <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -->
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
