--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
 .social:hover{
     opacity:0.9;
 }
+
+iframe{
+    border:3px solid white;
+    border-radius:15px;
+}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -370,12 +375,12 @@
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
     <div class = "row text-center">
-        <div class = "col-xs-12 col-sm-4">
-            <iframe width="300" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+        <div class = "col-xs-12 col-sm-6">
+            <iframe class = "img-fluid" width="300" height="315" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
 
-        <div class = "col-xs-12 col-sm-4">
-            <iframe src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div class = "col-xs-12 col-sm-6">
+            <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="315" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
     </div>
