--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 }
 
 iframe{
-    border:3px solid white;
-    border-radius:15px;
+    border:3px solid #777;
+    border-radius:5px;
 }
   </style>
 </head>
