--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ iframe{
 <!-- Container (TOUR Section) -->
 <div id="tour" class="bg-1">
   <div class="container">
-    <h3 class="text-center">TOUR DATES</h3>
+    <h3 class="text-center">UPCOMING SHOWS</h3>
     <ul class="list-group">
       <!-- <li class="list-group-item">January 5th <span class="label label-danger">Sold Out!</span></li>
       <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li> 
@@ -313,7 +313,7 @@ iframe{
           <p>9:00pm</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
-      </div>
+      </ >
       <!-- <div class="col-sm-4">
         <div class="thumbnail">
           <img src="newyork.jpg" alt="New York" width="400" height="300">
@@ -372,6 +372,7 @@ iframe{
 
 
 <!-- Container for Media -->
+
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
     <div class = "row text-center">
