--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ iframe{
 
 <div id = "media" class = "container">
     <h3 class="text-center">Media</h3>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
               <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -407,11 +407,11 @@ iframe{
             </div>
         
             <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <a class="left carousel-control" href="#myCarouseltwo" role="button" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <a class="right carousel-control" href="#myCarouseltwo" role="button" data-slide="next">
               <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
