--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ iframe{
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <iframe class = "img-fluid" width="1200" height="700" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                <iframe width="1200" height="700" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                 <div class="carousel-caption">
                   <!-- <h3>New York</h3>
                   <p>The atmosphere in New York is lorem ipsum.</p> -->
@@ -394,11 +394,11 @@ iframe{
               </div>
         
               <div class="item">
-                    <iframe class = "img-fluid" width="1200" height="700" src="https://www.youtube.com/embed/FwUE-WDi93Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                    <iframe width="1200" height="700" src="https://www.youtube.com/embed/FwUE-WDi93Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
               </div>
             
               <div class="item">
-                    <iframe class = "img-fluid" width="1200" height="700" src="https://www.youtube.com/embed/KWODTYi5KCY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="1200" height="700" src="https://www.youtube.com/embed/KWODTYi5KCY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="carousel-caption">
                   <!-- <h3>LA</h3>
                   <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p> -->
@@ -419,7 +419,7 @@ iframe{
         <h3 class = "text-center"> Spotify Songs</h3>
     <div class = "row text-center">
 
-        <div class = "col-xs-12 col-sm-12">
+        <div class = "col-xs-6 col-sm-12">
             <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="600" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
