--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ iframe{
           <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
             <span class="glyphicon glyphicon-remove"></span> Cancel
           </button>
-          <p>Need <a href="#">help?</a></p>
+          <!-- <p>Need <a href="#">help?</a></p> -->
         </div>
       </div>
     </div>
