working on modal

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ iframe{
         <div class="modal-body">
           <form role="form">
             <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $10 per person</label>
+              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $10 per person at door</label>
               <input type="number" class="form-control" id="psw" placeholder="How many?">
             </div>
             <div class="form-group">
