--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     width: 100%; /* Set width to 100% */
     margin: auto;
   }
+  .carousel-inner iframe {
+    -webkit-filter: grayscale(90%);
+    filter: grayscale(90%); /* make all photos black and white */ 
+    width: 100%; /* Set width to 100% */
+    margin: auto;
+  }
   .carousel-caption h3 {
     color: #fff !important;
   }
@@ -419,8 +425,8 @@ iframe{
         <h3 class = "text-center"> Spotify Songs</h3>
     <div class = "row text-center">
 
-        <div class = "col-xs-6 col-sm-12">
-            <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="600" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div class = "col-xs-12 col-sm-12">
+            <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
     </div>
