sizing of videos

--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@ iframe{
     <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
+              <li data-target="#myCarouseltwo" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarouseltwo" data-slide-to="1"></li>
+              <li data-target="#myCarouseltwo" data-slide-to="2"></li>
             </ol>
         
             <!-- Wrapper for slides -->
@@ -425,7 +425,7 @@ iframe{
         <h3 class = "text-center"> Spotify Songs</h3>
     <div class = "row text-center">
 
-        <div class = "col-xs-12 col-sm-12">
+        <div class = "col-xs-12 col-12">
             <iframe class = "img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="300" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
