--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     opacity:0.9;
 }
 
-/* iframe{
+iframe{
     border:5px solid #777;
     border-radius:15px;
-} */
+}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
