--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     width: 100%; /* Set width to 100% */
     margin: auto;
   }
+  .row iframe {
+    width: 80%; /* Set width to 100% */
+    margin: auto;
+  }
   .carousel-caption h3 {
     color: #fff !important;
   }
