--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ iframe{
           <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
         </div>
         <div class="modal-body">
-          <div id="paypal-button-container"></div>
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
+        <div id="paypal-button-container"></div>
+<script src="https://www.paypal.com/sdk/js?client-id=AWPlxDwd_GJ5I-8HkaAkqVywUv6oRicKNP0NTWFijL0QbmskT4mupAx7pAz6vPFNOdn31JuTI0QzhArj&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
     paypal.Buttons({
         style: {
@@ -351,7 +351,7 @@ iframe{
             return actions.order.create({
                 purchase_units: [{
                     amount: {
-                        value: '1'
+                        value: '10'
                     }
                 }]
             });
