--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ iframe{
           <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
         </div>
         <div class="modal-body">
-        <div id="paypal-button-container"></div>
+       <div id="paypal-button-container"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=AWPlxDwd_GJ5I-8HkaAkqVywUv6oRicKNP0NTWFijL0QbmskT4mupAx7pAz6vPFNOdn31JuTI0QzhArj&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
     paypal.Buttons({
@@ -344,7 +344,7 @@ iframe{
             shape: 'rect',
             color: 'gold',
             layout: 'vertical',
-            label: 'paypal',
+            label: 'buynow',
             
         },
         createOrder: function(data, actions) {
