--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ iframe{
 <div id="about" class="container text-center">
   <h3>THE BAND</h3>
   <p><em>Soul n Roll</em></p>
-  <p>Maddie In Good Company started in December of 2018 with Maddie, Chris and Griffin. Throughout the years they have played multile shows and recorded two songs. </p>
+  <p>Maddie In Good Company started in December of 2018 with Maddie, Chris and Griffin. Throughout the years they have played multiple shows and recorded two songs. </p>
   <br>
   <div class="row">
     <div class="col-sm-4">
@@ -270,8 +270,7 @@ iframe{
         </a>
         <div id="demo2" class="collapse">
             <p>Singer</p>
-            <p>Loves Creyton</p>
-            <p>Favorite Band: Slipknot</p>
+            <p>Favorite food: Pizza</p>
         </div>
     </div>
     <div class="col-sm-4">
@@ -281,8 +280,7 @@ iframe{
       </a>
       <div id="demo" class="collapse">
         <p>Guitarist</p>
-        <p>Loves NY pizza</p>
-        <p>Favorite Band: Phish</p>
+        <p>Favorite food: Ceviche</p>
       </div>
     </div>
   
@@ -293,8 +291,7 @@ iframe{
       </a>
       <div id="demo3" class="collapse">
         <p>Drummer</p>
-        <p>Loves Math</p>
-        <p>Favorite Band: U2</p>
+        <p>Favorite food: Crabcakes</p>
       </div>
     </div>
   </div>
