--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ iframe{
 <div id="about" class="container text-center">
   <h3>THE BAND</h3>
   <p><em>Soul n Roll</em></p>
-  <p>Maddie In Good Company started in December of 2018 with Maddie, Chris and Griffin. Throughout the years they have played multiple shows and recorded two songs. </p>
+  <p>Maddie in Good Company are half-glass-full cosmic comrades, who have conformed to the moral order of the universe by making music for the Milky Way Galaxy.</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
