--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ iframe{
           <button type="button" class="close" data-dismiss="modal">×</button>
           <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
           <h3>$10</h3>
-          <p style= "font-size:14px"><em>*Note: Purchase of ticket allows for free entry for show, but you will not recieve a physical ticket in mail. To redeem ticket provide your name to the front door.</em></p>
+          <p style= "font-size:14px"><em>*Note: Purchase of ticket allows for free entry for show, but you will not recieve a ticket in mail. To redeem ticket, provide your name to the front door.</em></p>
         </div>
         <div class="modal-body">
        <div id="paypal-button-container"></div>
