removed search icon

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ iframe{
         <li><a href="#tour">TOUR</a></li>
         <li><a href="#media">MEDIA</a></li>
         <li><a href="#contact">CONTACT</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+        <!-- <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li> -->
       </ul>
     </div>
   </div>
