--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ iframe{
     </div>
   </div>
 </div>
-
+</div>
 <!-- Container (TOUR Section) -->
 <div id="tour" class="bg-1">
   <div class="container">
