--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ iframe{
       <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -- -->
 
     </div>
-    <!-- <div class = "nav navbar-nav navbar-center">
-      <h3>Maddie in Good Company</h3>
-    </div> -->
+    <div class = "nav navbar-nav navbar-center bg-1">
+      <h3 style = "padding-left:20px;">Maddie in Good Company</h3>
+    </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
