--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ iframe{
       <div class="item active">
         <img src="assets/images/AnalogMaddie.jpeg" alt="Analog" width="1200" height="700">
         <div class="carousel-caption">
-          <!-- <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p> -->
+          <!-- <h3>Analog Hotel</h3>
+          <p>The atmosphere was magical.</p> -->
         </div>      
       </div>
 
