--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ iframe{
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4><strong>Setlist</strong></h4>
+          <h4><strong>View Setlist</strong></h4>
           <ol>
             <li>No Good</li>
             <li>Troubled Mind</li>
