added the word t-shirt

--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
           <input type="hidden" name="hosted_button_id" value="429FRYFLW9BLC">
           <table>
           <tr><td><input type="hidden" name="on0" value="Sizes">Sizes</td></tr><tr><td><select name="os0">
-            <option value="Small">Small $25.00 USD</option>
-            <option value="Medium">Medium $25.00 USD</option>
-            <option value="Large">Large $25.00 USD</option>
+            <option value="Small">Small T-Shirt $25.00 USD</option>
+            <option value="Medium">Medium T-Shirt $25.00 USD</option>
+            <option value="Large">Large T-Shirt $25.00 USD</option>
           </select> </td></tr>
           </table>
           <input type="hidden" name="currency_code" value="USD">
